# realsense_aruco

./: CMakeLists.txt  README.md  RealSense_cam_distor_vec.npy  RealSense_cam_matrix.npy  camera_matrix.csv  convert_calibration.py  distortion_vector.csv  main.cpp  plot.py  plot_multiple.py  plot_single.py  plot_tracking.py  test.py  z_realsence_rtdi_test EH.py
data/: Q_01_100_R_1.txt  Q_01_10_R_01.txt  Q_01_10_R_1.txt  Q_01_1_R_01.txt  Q_01_1_R_1.txt  Q_1_1_R_1.txt  measurement_noise_1.txt  measurement_noise_2.txt  measurement_noise_3.txt  measurement_noise_4.txt  servo100.txt  servo20.txt  servo40.txt  servo60.txt  servo80.txt  speedL_Kp20_Kd02.txt  speedL_Kp50_KdX_overshoot.txt  speedL_Kp50_overshoot.txt  speedL_Kp50_overshoot_video.txt  speedL_instability_2.txt  speedL_instability_Kp50_Kd00_float.txt  test.txt  trash.txt
include/: KalmanFilter.hpp  KalmanTesting.hpp  ObjectTracker.hpp  RealSenseCam.hpp  RobotController.hpp  Utility.hpp
scripts/: covariance.py  plot_multiple.py  plot_tracking.py
src/: KalmanFilter.cpp  KalmanTesting.cpp  ObjectTracker.cpp  RealSenseCam.cpp  RobotController.cpp  Utility.cpp  main.cpp
